--- a/src/common.blocks/contact-link/contact-link.scss
+++ b/src/common.blocks/contact-link/contact-link.scss
@@ -1,5 +1,5 @@
 .contact-link {
-  display: inline-block;
+  display: block;
   margin-top: 4px;
   font-size: 14px;
   font-family: 'Open Sans', sans-serif;
