--- a/src/common.blocks/main/__experience/main__experience.scss
+++ b/src/common.blocks/main/__experience/main__experience.scss
@@ -1,3 +1,7 @@
 .main__experience {
-  order: 3;
+  order: 0;
+  padding-right: 30px;
+  flex: 1 0 450px;
+  max-width: 100%;
+  box-sizing: border-box;
 }
