--- a/src/common.blocks/main/__projects/main__projects.scss
+++ b/src/common.blocks/main/__projects/main__projects.scss
@@ -1,6 +1,6 @@
 .main__projects {
-  padding-right: 30px;
-  flex: 1 0 450px;
-  max-width: 100%;
-  box-sizing: border-box;
+  // padding-right: 30px;
+  // flex: 1 0 450px;
+  // max-width: 100%;
+  // box-sizing: border-box;
 }
