rus and eng version added;

--- a/src/common.blocks/body/__inner/body__inner.scss
+++ b/src/common.blocks/body/__inner/body__inner.scss
@@ -1,6 +1,7 @@
 .body__inner {
   margin: 15px auto;
   padding: 55px;
+  padding-top: 15px;
   max-width: 720px;
   background-color: white;
   box-shadow: 0 0 6px #bbbbbb;
