about section added; some updates;

--- a/src/common.blocks/root.scss
+++ b/src/common.blocks/root.scss
@@ -27,6 +27,7 @@
 @import '@blocks/main/__section-title/main__section-title.scss';
 @import '@blocks/main/__experience/main__experience.scss';
 @import '@blocks/main/__experience/media.scss';
+@import '@blocks/main/__about/main__about.scss';
 
 @import '@blocks/projects/projects.scss';
 @import '@blocks/projects/__project-wrapper/projects__project-wrapper.scss';
@@ -42,13 +43,18 @@
 @import '@blocks/text/_ff/text_ff_open-sans.scss';
 @import '@blocks/text/_fw/text_fw_bold.scss';
 @import '@blocks/text/_mt/text_mt_12.scss';
+@import '@blocks/text/_mt/text_mt_8.scss';
+
+@import '@blocks/ul/ul.scss';
+@import '@blocks/ul/__list-item/ul__list-item.scss';
+
+@import '@blocks/about/about.scss';
+@import '@blocks/about/__ul/about__ul.scss';
 
 @import '@blocks/contacts/__phone/contacts__phone.scss';
 @import '@blocks/contacts/__text/contacts__text.scss';
 
 @import '@blocks/skills/skills.scss';
-@import '@blocks/skills/__ul/skills__ul.scss';
-@import '@blocks/skills/__list-item/skills__list-item.scss';
 
 @import '@blocks/work/work.scss';
 @import '@blocks/work/__projects/work__projects.scss';
